add legals section to reduce footer size and clutter

--- a/pages/blog.html
+++ b/pages/blog.html
@@ -67,11 +67,11 @@
         <section id="blog" class="container blog-post">
             <h2>Things I Have Learned. Week 2, Day 5.</h2>
             <div class="blog-content">
-                    <figure class="blog-hero">
-                        <img src="/pages/blog-archive/blog-images/blog-smallscreen-pexels-danny-meneses-340146-943096.jpg"
-                            alt="Laptop with lots of small code.">
-                        <figcaption>Photo by Pexels-Danny-Meneses</figcaption>
-                    </figure>
+                <figure class="blog-hero">
+                    <img src="/pages/blog-archive/blog-images/blog-smallscreen-pexels-danny-meneses-340146-943096.jpg"
+                        alt="Laptop with lots of small code.">
+                    <figcaption>Photo by Pexels-Danny-Meneses</figcaption>
+                </figure>
                 <div class="text">
                     <p> Now that the code is getting bigger and more complicated, it’s useful to keep an eye on what
                         your code is producing.</p>
@@ -87,7 +87,7 @@
                     <p> Plug one end into the laptop, plug the other end into the nearest TV, and set up dual
                         screen.
                         Use your laptop screen to input the code and watch the TV to see real-time changes!</p>
-                    <p>You’re welcome.</p>
+                    <p>You’re welcome!</p>
                     <h3> Method 2: Wireless Display Adapters</h3>
                     <p>If you prefer a wireless setup, consider using devices like Google Chromecast or the
                         Microsoft
@@ -167,8 +167,10 @@
                             alt="Amazon Affiliate Link. Ubluker 10K 8K 4K HDMI Cable 48Gbps 1.5M, Certified Ultra High Speed HDMI® Cable 4K 240Hz 144Hz 8K 60Hz 0.01ms HDR10+ ARC eARC HDCP2.3 Netflix Roku TV PC Monitor Projector PS5 Xbox"></a>
                 </div>
             </div>
-            <p class="center"> Using your TV as a second screen can be a cost efficient and beneficial working as you learn to code, as it allows you
-                to have more screen real estate for your development environment and to easily view output or documentation using equipment you possibly already have.
+            <p class="center"> Using your TV as a second screen can be a cost efficient and beneficial work-around as
+                you learn to code, as it allows you
+                to have more screen real estate for your development environment and to easily view output or
+                documentation using equipment you possibly already have.
             </p>
         </section>
         <!-- Previous and next blog arrows-->
@@ -190,27 +192,20 @@
     </main>
     <!-- Footer-->
     <footer>
-        <div class="container">
-            <div class="footer-top">
+        <div class="footer">
+            <div class="footer-signup">
                 <a href="signup.html" class="btn-signup">Sign Up!</a>
             </div>
             <div class="footer-bottom">
-                <div class="footer-left">
+                <div class="footer-amazonlink">
                     <p>As an <a href="https://amzn.to/4cZ7Tz3" target="_blank" class="amazon">Amazon Associate</a>, I
                         earn from qualifying purchases.</p>
                 </div>
-                <div class="footer-center">
-
-
+                <div class="footer-copyright">
                     <p>&copy; 2024 My Coding Journey. All rights reserved.</p>
                 </div>
-                <div class="footer-right">
-                    <nav>
-                        <ul>
-                            <li><a href="privacy-policy.html">Privacy Policy</a></li>
-                            <li><a href="contact.html">Contact</a></li>
-                        </ul>
-                    </nav>
+                <div class="footer-legals">
+                    <a href="legals">Legal Information</a>
                 </div>
             </div>
         </div>
