--- a/pages/blog.html
+++ b/pages/blog.html
@@ -123,7 +123,7 @@
                         </li>
                         <li> Configure Display Settings:
                             <ul>
-                                <li>Windows:
+                                <li id="blog-bold1">Windows:
                                     <ul>
                                         <li> Right-click on the desktop and select "Display settings."
                                         </li>
@@ -138,7 +138,7 @@
                                 </li>
                             </ul>
                             <ul>
-                                <li>On macOS:
+                                <li id="blog-bold2">On macOS:
                                     <ul>
                                         <li>Go to "System Preferences" > "Displays."
                                         </li>
@@ -152,7 +152,7 @@
                         </li>
                         <li> Adjust Resolution and Scaling:
                             <ul>
-                                <li>Ensure that the resolution and scaling settings are appropriate for your TV to
+                                <li id="blog-bold3">Ensure that the resolution and scaling settings are appropriate for your TV to
                                     get
                                     the
                                     best picture quality.</li>
@@ -176,17 +176,14 @@
         <!-- Previous and next blog arrows-->
         <div class="container next-prev-blog">
             <div class="prev-blog">
-                <!--<a href="pages/blog-archive/blog-day-3.html"><p>Last blog post</p></a>-->
+                <a href="pages/blog-archive/blog-day-3.html">
+                    <p>Last blog post</p>
+                </a>
             </div>
             <div class="next-blog">
-                <p>Next blog post</p>
-                <div class="right-arrow">
-                    <div></div>
-                </div>
-                <div class="left-arrow">
-                    <div></div>
-                </div>
-
+                <a href="">
+                    <p>Next blog post</p>
+                </a>
             </div>
         </div>
     </main>
