I changed too much

--- a/backup-files/index.html
+++ b/backup-files/index.html
@@ -11,6 +11,12 @@
     <meta name="author" content="LJ Talks">
     <title>My Coding Journey</title>
     <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap"
+        rel="stylesheet">
+
     <!-- MailerLite Universal -->
     <script>
         (function (w, d, e, u, f, l, n) {
@@ -34,18 +40,19 @@
 <body>
     <!-- Main Header Section -->
     <header>
-        <div class="container">
-            <h1><a href="index.html">My Coding Journey</a></h1>
+        <div class="container header">
+            <a href="/index.html" id="logo-text">
+                <h1>My Coding Journey</h1>
+            </a>
             <nav>
-                <ul>
-                    <li><a href="index.html" class="active">Home</a></li>
-                    <li><a href="pages/about.html">About</a></li>
+                <ul id="header-menu">
                     <li class="dropdown">
                         <a href="#" class="dropbtn">More</a>
                         <div class="dropdown-content">
                             <a href="pages/blog.html">Blog</a>
-                            <a href="pages/portfolio.html">Portfolio</a>
-                            <a href="pages/testimonials.html">Testimonials</a>
+                            <a href="pages/about.html">About</a>
+                            <!--<a href="pages/portfolio.html">Portfolio</a>
+                            <a href="pages/testimonials.html">Testimonials</a>-->
                             <a href="pages/product-reviews.html">Product Reviews</a>
                             <a href="pages/contact.html">Get in Touch!</a>
                         </div>
@@ -58,56 +65,59 @@
     <main>
         <section id="home">
             <div class="container">
-                <a href="index.html" class="active">
-                    <h2>Welcome to My Coding Journey</h2>
-                </a>
-                <p>This is where I share my progress, projects, and experiences as I navigate the world of coding and
-                    freelancing.</p>
+                <h2 id="hello">Hello!</h2>
+                <p>My little space to share my progress, projects, and experiences as I navigate the world of
+                    coding and freelancing.</p>
+                <p>I'm currently 7 weeks into my coding journey (and a year into Digital Freelancing)! I'm loving every
+                    minute.</p>
+            </div>
+            <div id="myphoto">
+                <div id="circle-cover-bg">
+                </div>
             </div>
         </section>
-        <div id="myphoto">
-            <div id="circle-cover-bg">
-
-            </div>
-        </div>
-        <section id="about">
+        <section>
             <div class="container">
-                <h2>About Me</h2>
-                <p>Learn more about my background, career change, and what drives me.</p>
+                <p>I love solving problems, even
+                    though things get pretty frustrating sometimes! Watch this site evolve as I learn new tricks and
+                    upskill. It's great to have you here!</p>
+                <p>p.s. Sometimes things go a bit squiffy in here. Like right now... Please be patient while I figure
+                    out how
+                    I broke it!</p>
             </div>
         </section>
         <section id="blog">
             <div class="container">
-                <h2>Blog</h2>
+                <a href="pages/blog.html" class="int-link">
+                    <h2>My Latest Blog</h2>
+                </a>
                 <p>Check out my latest blog posts and updates.</p>
-            </div>
-        </section>
-        <section id="portfolio">
-            <div class="container">
-                <h2>Portfolio</h2>
-                <p>Explore the projects and work I've done.</p>
-            </div>
-        </section>
-        <section id="testimonials">
-            <div class="container">
-                <h2>Testimonials</h2>
-                <p>Read feedback from clients and mentors.</p>
-            </div>
-        </section>
-        <section id="reviews">
-            <div class="container">
-                <h2>Reviews</h2>
-                <p>Find reviews of tools and resources I've used.</p>
+                <p>I'm very new to coding and fairly new to anything tech, so prepare to cringe at some of the
+                    things I'm thinking and writing about.</p>
+                <p>Send me a comment if I need correcting! Every Day's a School Day, and I know I don't know what I
+                    don't know yet!</p>
             </div>
         </section>
         <section id="contact">
             <div class="container">
-                <h2>Contact</h2>
-                <p>Get in touch with me through this contact form or on social media.</p>
+                <a href="pages/contact.html" class="int-link">
+                    <h2>Contact</h2>
+                </a>
+                <p>Get in touch with me.</p>
             </div>
         </section>
     </main>
     <footer>
+        <script>
+            document.getElementById("menu-icon").onclick = function () {
+                var menu = document.getElementById("menu");
+                if (menu.style.display === "block") {
+                    menu.style.display = "none";
+                } else {
+                    menu.style.display = "block";
+                }
+            };
+        </script>
         <div class="container">
             <div class="footer-top">
                 <a href="pages/signup.html" class="btn-signup">Sign Up!</a>
