--- a/backup-files/pages copy/pages/blog.html
+++ b/backup-files/pages copy/pages/blog.html
@@ -67,51 +67,47 @@
         <section id="blog" class="container blog-post">
             <h2>Things I Have Learned. Week 2, Day 5.</h2>
             <div class="blog-content">
-                <div class="blog-top">
-                    <figure class="blog-hero">
-                        <img src="/pages/blog-archive/blog-images/blog-smallscreen-pexels-danny-meneses-340146-943096.jpg"
-                            alt="Laptop with lots of small code.">
-                        <figcaption>Photo by Pexels-Danny-Meneses</figcaption>
-                    </figure>
-                    <div class="text">
-                        <p> Now that the code is getting bigger and more complicated, it’s useful to keep an eye on what
-                            your code is producing.</p>
-                        <p> Something as simple as an HDMI cable can easily transform your coding experience,
-                            especially if you have a small screen laptop.</p>
-                    </div>
-                </div>
-                <div class="method"></div>
-                <h3> Method 1: HDMI Cable </h3>
-                <p>Check out this product on <a href="https://amzn.to/3ykDImV" target="_blank" rel="noopener noreferrer"
-                        class="amazon">Amazon (Affiliate Link)</a> (other brands are
-                    available!).</p>
-                <figure class="blog-amazon">
-                    <a href="https://amzn.to/3ykDImV" target="_blank" rel="noopener noreferrer"
-                        class="amazon-image"><img src="/pages/blog-archive/blog-images/affiliate/amazon/3ykDImV1.png"
-                            alt="Amazon HDMI cable."></a>
-                    <figcaption>Amazon HDMI Cable</figcaption>
+                <figure class="blog-hero">
+                    <img src="/pages/blog-archive/blog-images/blog-smallscreen-pexels-danny-meneses-340146-943096.jpg"
+                        alt="Laptop with lots of small code.">
+                    <figcaption>Photo by Pexels-Danny-Meneses</figcaption>
                 </figure>
-                <p> Plug one end into the laptop, plug the other end into the nearest TV, and set up dual
-                    screen.
-                    Use your laptop screen to input the code and watch the TV to see real-time changes!</p>
-                <p>You’re welcome!</p>
-                <h3> Method 2: Wireless Display Adapters</h3>
-                <p>If you prefer a wireless setup, consider using devices like Google Chromecast or the
-                    Microsoft Wireless Display Adapter.</p>
-                <p>These allow you to stream your computer’s display wirelessly to your TV. Just follow
-                    the device-specific instructions to connect your computer to your TV.</p>
-                <h3> Method 3: Smart TV Apps</h3>
-                <p> Some smart TVs have built-in apps or support screen mirroring technologies like Miracast,
-                    AirPlay, or Chromecast. You can use these features to mirror your computer screen to your TV
-                    wirelessly.
-                </p>
-            </div>
-            <figure class="blog-amazon">
-                <a href="https://amzn.to/3SEV6th" target="_blank" rel="noopener noreferrer" class="amazon-image"><img
-                        src="/pages/blog-archive/blog-images/affiliate/amazon/samsung-tv.png"
-                        alt="Amazon Samsung Smart TV"></a>
-                <figcaption>Amazon Samsung Smart TV</figcaption>
-            </figure>
+                <div class="text">
+                    <p> Now that the code is getting bigger and more complicated, it’s useful to keep an eye on what
+                        your code is producing.</p>
+                    <p> Something as simple as an HDMI cable can easily transform your coding experience,
+                        especially if you have a small screen laptop.</p>
+
+                    <h3> Method 1: HDMI Cable </h3>
+                    <p>Check out this product on <a href="https://amzn.to/3ykDImV" target="_blank"
+                            rel="noopener noreferrer" class="amazon">Amazon (Affiliate Link)</a> (other brands are
+                        available!).</p>
+                    <!-- add image https://amzn.to/3ykDImV-->
+
+                    <p> Plug one end into the laptop, plug the other end into the nearest TV, and set up dual
+                        screen.
+                        Use your laptop screen to input the code and watch the TV to see real-time changes!</p>
+                    <p>You’re welcome!</p>
+                    <h3> Method 2: Wireless Display Adapters</h3>
+                    <p>If you prefer a wireless setup, consider using devices like Google Chromecast or the
+                        Microsoft
+                        Wireless
+                        Display Adapter.</p>
+                    <p>These allow you to stream your computer’s display wirelessly to your TV. Just follow
+                        the device-specific instructions to connect your computer to your TV.</p>
+
+                    <h3> Method 3: Smart TV Apps</h3>
+                    <p> Some smart TVs have built-in apps or support screen mirroring technologies like Miracast,
+                        AirPlay, or
+                        Chromecast. You can use these features to mirror your computer screen to your TV wirelessly.
+                    </p>
+
+                </div>
+                <div class="image">
+                    <a href="https://amzn.to/3ykDImV" target="_blank" rel="noopener noreferrer" class="amazon-image">
+                        <img src="../pages/blog-archive/blog-images/affiliate/amazon/3ykDImV1.png"
+                            alt="Amazon Affiliate Link. Ubluker 10K 8K 4K HDMI Cable 48Gbps 1.5M, Certified Ultra High Speed HDMI® Cable 4K 240Hz 144Hz 8K 60Hz 0.01ms HDR10+ ARC eARC HDCP2.3 Netflix Roku TV PC Monitor Projector PS5 Xbox"></a>
+                </div>
             </div>
             <div class="blog-content reverse">
                 <div class="text">
@@ -193,15 +189,20 @@
     <!-- Footer-->
     <footer>
         <div class="footer">
-            <div class="footer-amazonlink">
-                <p>As an <a href="https://amzn.to/4cZ7Tz3" target="_blank" class="amazon">Amazon Associate</a>, I
-                    earn from qualifying purchases.</p>
-            </div>
             <div class="footer-signup">
                 <a href="signup.html" class="btn-signup">Sign Up!</a>
             </div>
-            <div class="footer-copyright">
-                <p>&copy; 2024 My Coding Journey. All rights reserved.</p>
+            <div class="footer-bottom">
+                <div class="footer-amazonlink">
+                    <p>As an <a href="https://amzn.to/4cZ7Tz3" target="_blank" class="amazon">Amazon Associate</a>, I
+                        earn from qualifying purchases.</p>
+                </div>
+                <div class="footer-copyright">
+                    <p>&copy; 2024 My Coding Journey. All rights reserved.</p>
+                </div>
+                <div class="footer-legals">
+                    <a href="legals">Legal Information</a>
+                </div>
             </div>
         </div>
     </footer>
