--- a/pages/blog.html
+++ b/pages/blog.html
@@ -127,7 +127,7 @@
                         </li>
                         <li> Configure Display Settings:
                             <ul>
-                                <li id="blog-bold1" <strong>Windows:</strong>
+                                <li id="blog-bold1"><strong>Windows:</strong>
                                     <ul>
                                         <li> Right-click on the desktop and select "Display settings."
                                         </li>
@@ -135,8 +135,7 @@
                                             "Detect."
                                         </li>
                                         <li> Choose how you want to use the TV: "Duplicate" (mirror the display),
-                                            "Extend" (use
-                                            as a separate screen), or "Second screen only."
+                                            "Extend" (use as a separate screen), or "Second screen only."
                                         </li>
                                     </ul>
                                 </li>
@@ -163,12 +162,6 @@
                         </li>
                     </ol>
                 </div>
-
-                <div class="image">
-                    <a href="https://amzn.to/3ykDImV" target="_blank" rel="noopener noreferrer" class="amazon-image">
-                        <img src="../pages/blog-archive/blog-images/affiliate/amazon/3ykDImV2.png"
-                            alt="Amazon Affiliate Link. Ubluker 10K 8K 4K HDMI Cable 48Gbps 1.5M, Certified Ultra High Speed HDMI® Cable 4K 240Hz 144Hz 8K 60Hz 0.01ms HDR10+ ARC eARC HDCP2.3 Netflix Roku TV PC Monitor Projector PS5 Xbox"></a>
-                </div>
             </div>
             <p class="center"> Using your TV as a second screen can be a cost efficient and beneficial work-around as
                 you learn to code, as it allows you
@@ -192,7 +185,7 @@
     </main>
     <!-- Footer-->
     <footer>
-        <div class="footer">
+        <div id="footer">
             <div class="footer-amazonlink">
                 <p>As an <a href="https://amzn.to/4cZ7Tz3" target="_blank" class="amazon">Amazon Associate</a>, I
                     earn from qualifying purchases.</p>
