--- a/pages/blog.html
+++ b/pages/blog.html
@@ -80,94 +80,106 @@
                             especially if you have a small screen laptop.</p>
                     </div>
                 </div>
-                <div class="method"></div>
-                <h3> Method 1: HDMI Cable </h3>
-                <p>Check out this product on <a href="https://amzn.to/3ykDImV" target="_blank" rel="noopener noreferrer"
-                        class="amazon">Amazon (Affiliate Link)</a> (other brands are
-                    available!).</p>
-                <figure class="blog-amazon">
-                    <a href="https://amzn.to/3ykDImV" target="_blank" rel="noopener noreferrer"
-                        class="amazon-image"><img src="/pages/blog-archive/blog-images/affiliate/amazon/3ykDImV1.png"
-                            alt="Amazon HDMI cable."></a>
-                    <figcaption>Amazon HDMI Cable</figcaption>
-                </figure>
-                <p> Plug one end into the laptop, plug the other end into the nearest TV, and set up dual
-                    screen.
-                    Use your laptop screen to input the code and watch the TV to see real-time changes!</p>
-                <p>You’re welcome!</p>
-                <h3> Method 2: Wireless Display Adapters</h3>
-                <p>If you prefer a wireless setup, consider using devices like Google Chromecast or the
-                    Microsoft Wireless Display Adapter.</p>
-                <p>These allow you to stream your computer’s display wirelessly to your TV. Just follow
-                    the device-specific instructions to connect your computer to your TV.</p>
-                <h3> Method 3: Smart TV Apps</h3>
-                <p> Some smart TVs have built-in apps or support screen mirroring technologies like Miracast,
-                    AirPlay, or Chromecast. You can use these features to mirror your computer screen to your TV
-                    wirelessly.
-                </p>
-            </div>
-            <figure class="blog-amazon">
-                <a href="https://amzn.to/3SEV6th" target="_blank" rel="noopener noreferrer" class="amazon-image"><img
-                        src="/pages/blog-archive/blog-images/affiliate/amazon/samsung-tv.png"
-                        alt="Amazon Samsung Smart TV"></a>
-                <figcaption>Amazon Samsung Smart TV</figcaption>
-            </figure>
-            </div>
-            <div class="blog-content reverse">
-                <div class="text">
-                    <h3> Method 4: DisplayPort or USB-C to HDMI Adapter</h3>
-                    <p> If your computer has a DisplayPort or USB-C output, you can use an adapter to connect to the
-                        HDMI port
-                        on your TV. This is a great alternative if your laptop doesn’t have an HDMI port.</p>
-                    <h3> Steps to Set Up the TV as a Second Screen</h3>
-                    <ol>
-                        <li> Connect the TV:
-                        </li>
-                        <li> Use the appropriate cable or wireless method to connect your TV to your computer.
-                        </li>
-                        <li> Configure Display Settings:
-                            <ul>
-                                <li id="blog-bold1"><strong>Windows:</strong>
-                                    <ul>
-                                        <li> Right-click on the desktop and select "Display settings."
-                                        </li>
-                                        <li> You should see your TV listed as a second monitor. If not, click on
-                                            "Detect."
-                                        </li>
-                                        <li> Choose how you want to use the TV: "Duplicate" (mirror the display),
-                                            "Extend" (use as a separate screen), or "Second screen only."
-                                        </li>
-                                    </ul>
-                                </li>
-                            </ul>
-                            <ul>
-                                <li id="blog-bold2"><strong>On macOS:</strong>
-                                    <ul>
-                                        <li>Go to "System Preferences" > "Displays."
-                                        </li>
-                                        <li>You should see the TV listed as a second display. Adjust the settings to
-                                            "Mirror
-                                            Displays" or "Extend Desktop."
-                                        </li>
-                                    </ul>
-                                </li>
-                            </ul>
-                        </li>
-                        <li> Adjust Resolution and Scaling:
-                            <ul>
-                                <li id="blog-bold3"><strong>Ensure that the resolution and scaling settings are
-                                        appropriate for your TV to get
-                                        the best picture quality.</strong></li>
-                            </ul>
-                        </li>
-                    </ol>
+                <div class="blog-middle">
+                    <div class="method">
+                        <h3> Method 1: HDMI Cable </h3>
+                        <p>Check out this product on <a href="https://amzn.to/3ykDImV" target="_blank"
+                                rel="noopener noreferrer" class="amazon">Amazon (Affiliate Link)</a> (other brands are
+                            available!).</p>
+                    </div>
+                    <figure class="blog-amazon">
+                        <a href="https://amzn.to/3ykDImV" target="_blank" rel="noopener noreferrer"
+                            class="amazon-image"><img
+                                src="/pages/blog-archive/blog-images/affiliate/amazon/3ykDImV1.png"
+                                alt="Amazon HDMI cable."></a>
+                        <figcaption>Amazon HDMI Cable</figcaption>
+                    </figure>
+                    <div class="div2">
+                        <p> Plug one end into the laptop, plug the other end into the nearest TV, and set up dual
+                            screen.
+                            Use your laptop screen to input the code and watch the TV to see real-time changes!</p>
+                        <p>You’re welcome!</p>
+                    </div>
                 </div>
-            </div>
-            <p class="center"> Using your TV as a second screen can be a cost efficient and beneficial work-around as
-                you learn to code, as it allows you
-                to have more screen real estate for your development environment and to easily view output or
-                documentation using equipment you possibly already have.
-            </p>
+                <div class="blog-middle2">
+                    <h3> Method 2: Wireless Display Adapters</h3>
+                    <p>If you prefer a wireless setup, consider using devices like Google Chromecast or the
+                        Microsoft Wireless Display Adapter.</p>
+                    <p>These allow you to stream your computer’s display wirelessly to your TV. Just follow
+                        the device-specific instructions to connect your computer to your TV.</p>
+                </div>
+                <div class="blog-middle3">
+                    <div class="smart-tv">
+                        <h3> Method 3: Smart TV Apps</h3>
+                        <p> Some smart TVs have built-in apps or support screen mirroring technologies like Miracast,
+                            AirPlay, or Chromecast. You can use these features to mirror your computer screen to your TV
+                            wirelessly.
+                        </p>
+                    </div>
+                    <figure class="blog-amazon">
+                        <a href="https://amzn.to/3SEV6th" target="_blank" rel="noopener noreferrer"
+                            class="amazon-image"><img
+                                src="/pages/blog-archive/blog-images/affiliate/amazon/samsung-tv.png"
+                                alt="Amazon Samsung Smart TV"></a>
+                        <figcaption>Amazon Samsung Smart TV</figcaption>
+                    </figure>
+                </div>
+                <div class="blog-content reverse">
+                    <div class="text">
+                        <h3> Method 4: DisplayPort or USB-C to HDMI Adapter</h3>
+                        <p> If your computer has a DisplayPort or USB-C output, you can use an adapter to connect to the
+                            HDMI port
+                            on your TV. This is a great alternative if your laptop doesn’t have an HDMI port.</p>
+                        <h3> Steps to Set Up the TV as a Second Screen</h3>
+                        <ol>
+                            <li> Connect the TV:
+                            </li>
+                            <li> Use the appropriate cable or wireless method to connect your TV to your computer.
+                            </li>
+                            <li> Configure Display Settings:
+                                <ul>
+                                    <li id="blog-bold1"><strong>Windows:</strong>
+                                        <ul>
+                                            <li> Right-click on the desktop and select "Display settings."
+                                            </li>
+                                            <li> You should see your TV listed as a second monitor. If not, click on
+                                                "Detect."
+                                            </li>
+                                            <li> Choose how you want to use the TV: "Duplicate" (mirror the display),
+                                                "Extend" (use as a separate screen), or "Second screen only."
+                                            </li>
+                                        </ul>
+                                    </li>
+                                </ul>
+                                <ul>
+                                    <li id="blog-bold2"><strong>On macOS:</strong>
+                                        <ul>
+                                            <li>Go to "System Preferences" > "Displays."
+                                            </li>
+                                            <li>You should see the TV listed as a second display. Adjust the settings to
+                                                "Mirror
+                                                Displays" or "Extend Desktop."
+                                            </li>
+                                        </ul>
+                                    </li>
+                                </ul>
+                            </li>
+                            <li> Adjust Resolution and Scaling:
+                                <ul>
+                                    <li id="blog-bold3"><strong>Ensure that the resolution and scaling settings are
+                                            appropriate for your TV to get
+                                            the best picture quality.</strong></li>
+                                </ul>
+                            </li>
+                        </ol>
+                    </div>
+                </div>
+                <p class="center"> Using your TV as a second screen can be a cost efficient and beneficial work-around
+                    as
+                    you learn to code, as it allows you
+                    to have more screen real estate for your development environment and to easily view output or
+                    documentation using equipment you possibly already have.
+                </p>
         </section>
         <!-- Previous and next blog arrows-->
         <div class="container next-prev-blog">
