Update all footers

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -91,26 +91,16 @@
         </section>
     </main>
     <footer>
-        <div class="container">
-            <div class="footer-top">
+        <div id="footer">
+            <div class="footer-amazonlink">
+                <p>As an <a href="https://amzn.to/4cZ7Tz3" target="_blank" class="amazon">Amazon Associate</a>, I
+                    earn from qualifying purchases.</p>
+            </div>
+            <div class="footer-signup">
                 <a href="signup.html" class="btn-signup">Sign Up!</a>
             </div>
-            <div class="footer-bottom">
-                <div class="footer-left">
-                    <p>As an <a href="https://amzn.to/4cZ7Tz3" target="_blank" class="amazon">Amazon Associate</a>, I
-                        earn from qualifying purchases.</p>
-                </div>
-                <div class="footer-center">
-                    <p>&copy; 2024 My Coding Journey. All rights reserved.</p>
-                </div>
-                <div class="footer-right">
-                    <nav>
-                        <ul>
-                            <li><a href="privacy-policy.html">Privacy Policy</a></li>
-                            <li><a href="contact.html">Contact</a></li>
-                        </ul>
-                    </nav>
-                </div>
+            <div class="footer-copyright">
+                <p>&copy; 2024 My Coding Journey. All rights reserved.</p>
             </div>
         </div>
     </footer>
