--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
             </div>
         </section>
         <section id="blog">
-            <div class="container">
+            <div class="container" id="home-blog">
                 <a href="pages/blog.html" class="int-link">
                     <h2>My Latest Blog</h2>
                 </a>
@@ -98,7 +98,7 @@
                     don't know yet!</p>
             </div>
         </section>
-        <section id="contact">
+        <section id="home-contact">
             <div class="container">
                 <a href="pages/contact.html" class="int-link">
                     <h2>Contact</h2>
@@ -118,26 +118,17 @@
                 }
             };
         </script>
-        <div class="container">
-            <div class="footer-top">
-                <a href="pages/signup.html" class="btn-signup">Sign Up!</a>
+    <footer>
+        <div id="footer">
+            <div class="footer-amazonlink">
+                <p>As an <a href="https://amzn.to/4cZ7Tz3" target="_blank" class="amazon">Amazon Associate</a>, I
+                    earn from qualifying purchases.</p>
             </div>
-            <div class="footer-bottom">
-                <div class="footer-left">
-                    <p>As an <a href="https://amzn.to/4cZ7Tz3" target="_blank" class="amazon">Amazon Associate</a>, I
-                        earn from qualifying purchases.</p>
-                </div>
-                <div class="footer-center">
-                    <p>&copy; 2024 My Coding Journey. All rights reserved.</p>
-                </div>
-                <div class="footer-right">
-                    <nav>
-                        <ul>
-                            <li><a href="pages/privacy-policy.html">Privacy Policy</a></li>
-                            <li><a href="pages/contact.html">Contact</a></li>
-                        </ul>
-                    </nav>
-                </div>
+            <div class="footer-signup">
+                <a href="signup.html" class="btn-signup">Sign Up!</a>
+            </div>
+            <div class="footer-copyright">
+                <p>&copy; 2024 My Coding Journey. All rights reserved.</p>
             </div>
         </div>
     </footer>
