Fixed footer css

--- a/pages/about.html
+++ b/pages/about.html
@@ -35,7 +35,7 @@
     <!-- Main Header Section -->
     <header>
         <div class="container header">
-            <a href="../index.html" id="logo-text">
+            <a href="/index.html" id="logo-text">
                 <h1>My Coding Journey</h1>
             </a>
             <nav>
@@ -44,9 +44,9 @@
                         <a href="#" class="dropbtn">More</a>
                         <div class="dropdown-content">
                             <a href="blog.html">Blog</a>
-                            <a href="about.html" class="active">About</a>
-                            <!--<a href="portfolio.html">Portfolio</a>-->
-                            <!--<a href="testimonials.html" class="active">Testimonials</a>-->
+                            <a href="about.html">About</a>
+                            <!--<a href="portfolio.html">Portfolio</a>
+                            <a href="testimonials.html">Testimonials</a>-->
                             <a href="product-reviews.html">Product Reviews</a>
                             <a href="contact.html">Get in Touch!</a>
                         </div>
