--- a/pages/blog.html
+++ b/pages/blog.html
@@ -40,23 +40,21 @@
     <!-- Main Header Section -->
     <header>
         <div class="container header">
-            <a href="../index.html" id="logo-text">
+            <a href="/index.html" id="logo-text">
                 <h1>My Coding Journey</h1>
             </a>
             <nav>
-                <ul id="header-nav">
+                <ul id="header-menu">
                     <li class="dropdown">
-                        <img src="../assets/images/logo/round-logo.png" alt="Logo" class="logo-round"></a>
+                        <a href="#" class="dropbtn">More</a>
                         <div class="dropdown-content">
-                            <button onclick="myFunction()" class="dropbtn">Dropdown</button>
-                            <div id="myDropdown" class="dropdown-content">
-                                <a href="blog.html" class="active">Blog</a>
-                                <a href="about.html">About</a>
-                                <!--<a href="portfolio.html">Portfolio</a>-->
-                                <!--<a href="testimonials.html" class="active">Testimonials</a>-->
-                                <a href="product-reviews.html">Product Reviews</a>
-                                <a href="contact.html">Get in Touch!</a>
-                            </div>
+                            <a href="blog.html">Blog</a>
+                            <a href="about.html">About</a>
+                            <!--<a href="portfolio.html">Portfolio</a>
+                            <a href="testimonials.html">Testimonials</a>-->
+                            <a href="product-reviews.html">Product Reviews</a>
+                            <a href="contact.html">Get in Touch!</a>
+                        </div>
                     </li>
                 </ul>
             </nav>
