--- a/pages/product-reviews.html
+++ b/pages/product-reviews.html
@@ -35,7 +35,9 @@
     <!-- Main Header Section -->
     <header>
         <div class="container header">
-            <a href="../index.html" id="logo-text"><h1>My Coding Journey</h1></a>
+            <a href="/index.html" id="logo-text">
+                <h1>My Coding Journey</h1>
+            </a>
             <nav>
                 <ul id="header-menu">
                     <li class="dropdown">
@@ -43,9 +45,9 @@
                         <div class="dropdown-content">
                             <a href="blog.html">Blog</a>
                             <a href="about.html">About</a>
-                            <a href="portfolio.html">Portfolio</a>
+                            <!--<a href="portfolio.html">Portfolio</a>
                             <a href="testimonials.html">Testimonials</a>
-                            <a href="product-reviews.html" class="active">Product Reviews</a>
+                            <a href="product-reviews.html">Product Reviews</a>-->
                             <a href="contact.html">Get in Touch!</a>
                         </div>
                     </li>
