Contact submit button

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -73,7 +73,7 @@
                         <label for="message">Your message:</label>
                         <textarea id="message" name="message" rows="5" required></textarea>
 
-                        <button type="submit">Send</button>
+                        <button class="btn" type="submit">Send</button>
                     </form>
                 </div>
             </section>
