Fix body height

--- a/pages/about.html
+++ b/pages/about.html
@@ -46,8 +46,8 @@
                             <a href="blog.html">Blog</a>
                             <a href="about.html">About</a>
                             <!--<a href="portfolio.html">Portfolio</a>
-                            <a href="testimonials.html">Testimonials</a>-->
-                            <a href="product-reviews.html">Product Reviews</a>
+                            <a href="testimonials.html">Testimonials</a>
+                            <a href="product-reviews.html">Product Reviews</a>-->
                             <a href="contact.html">Get in Touch!</a>
                         </div>
                     </li>
