Add blog index link to blog page

--- a/pages/blog.html
+++ b/pages/blog.html
@@ -180,6 +180,7 @@
                 </p>
         </section>
         <!-- Previous and next blog arrows-->
+         
         <div class="container next-prev-blog">
             <div class="prev-blog">
                 <a href="pages/blog-archive/blog-day-3.html">
@@ -191,6 +192,9 @@
                     <p>Next blog post</p>
                 </a>
             </div>
+        </div>
+        <div class="blog-index">
+            <a href="pages/blog-index">Blog Contents</a>
         </div>
     </main>
     <!-- Footer-->
