Create landing page for blog index

--- a/pages/blog.html
+++ b/pages/blog.html
@@ -194,7 +194,7 @@
             </div>
         </div>
         <div class="blog-index">
-            <a href="pages/blog-index">Blog Contents</a>
+            <a href="/pages/blog-index.html">Blog Contents</a>
         </div>
     </main>
     <!-- Footer-->
