--- a/404.html
+++ b/404.html
@@ -48,42 +48,27 @@
                     <li class="dropdown">
                         <a href="#" class="dropbtn">More</a>
                         <div class="dropdown-content">
-                            <a href="blog.html">Blog</a>
-                            <a href="about.html">About</a>
+                            <a href="pages/blog.html">Blog</a>
+                            <a href="pages/about.html">About</a>
                             <!--<a href="portfolio.html">Portfolio</a>
                             <a href="testimonials.html">Testimonials</a>-->
-                            <a href="product-reviews.html">Product Reviews</a>
-                            <a href="contact.html">Get in Touch!</a>
+                            <a href="pages/product-reviews.html">Product Reviews</a>
+                            <a href="pages/contact.html">Get in Touch!</a>
                         </div>
                     </li>
                 </ul>
             </nav>
         </div>
     </header>
-    <!-- Blog post -->
+    <!-- Main Page Section -->
     <main>
-        <section>
-<h2>Blog Index</h2>
-<p>Those of you who are in the know (I wasn't until recently!) will appreciate that it's very difficult to create a functioning blog with many pages, using HTML and CSS. Hence why my progress in here has stalled somewhat!</p>
-<p>For now, I've been cycling between ignorning the site and continuing my studies, whilst also trying to find little workarounds to get this site to do what I want it it do.</p>
-<p>Thankfully, I just finished the Python section in my course, and am now heading into creating my very own first full stack app, using Python, django and Heroku. I've written about it here. It's going to make things more simple for the site (I'm reluctant to say easier at this point!)</p>
-<p>But for now, here are my most recent blog posts. </p>
-<p>Enjoy!</p>
-        </section>
-        <!-- Previous and next blog arrows-->
+        <section id="not-found">
+<h2>Whoops!</h2>
+<p>It looks like the page you're looking  for doesn't exist. My bad.</p>
+<p>Click <a href="index.html">here to go back to the homepage</a>.  
 
-        <div class="container next-prev-blog">
-            <div class="prev-blog">
-                <a href="pages/blog-archive/blog-day-3.html">
-                    <p>Last blog post</p>
-                </a>
-            </div>
-            <div class="next-blog">
-                <a href="">
-                    <p>Next blog post</p>
-                </a>
-            </div>
-        </div>
+</p>
+        </section>
     </main>
     <!-- Footer-->
     <footer>
@@ -93,7 +78,7 @@
                     earn from qualifying purchases.</p>
             </div>
             <div class="footer-signup">
-                <a href="signup.html" class="btn-signup">Sign Up!</a>
+                <a href="pages/signup.html" class="btn-signup">Sign Up!</a>
             </div>
             <div class="footer-copyright">
                 <p>&copy; 2024 My Coding Journey. All rights reserved.</p>
