--- a/404.html
+++ b/404.html
@@ -15,7 +15,7 @@
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap');
     </style>
-    <link rel="stylesheet" href="../assets/css/style.css">
+    <link rel="stylesheet" href="assets/css/style.css">
     <!-- MailerLite Universal -->
     <script>
         (function (w, d, e, u, f, l, n) {
@@ -65,7 +65,7 @@
         <section id="not-found">
 <h2>Whoops!</h2>
 <p>It looks like the page you're looking  for doesn't exist. My bad.</p>
-<p>Click <a href="index.html">here to go back to the homepage</a>.  
+<p>Click <a href="404.html">here to go back to the homepage</a>.  
 
 </p>
         </section>
