Fix css link on 404 page

--- a/404.html
+++ b/404.html
@@ -15,7 +15,7 @@
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap');
     </style>
-    <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="/assets/css/style.css">
     <!-- MailerLite Universal -->
     <script>
         (function (w, d, e, u, f, l, n) {
@@ -48,12 +48,12 @@
                     <li class="dropdown">
                         <a href="#" class="dropbtn">More</a>
                         <div class="dropdown-content">
-                            <a href="pages/blog.html">Blog</a>
-                            <a href="pages/about.html">About</a>
+                            <a href="/pages/blog.html">Blog</a>
+                            <a href="/pages/about.html">About</a>
                             <!--<a href="portfolio.html">Portfolio</a>
                             <a href="testimonials.html">Testimonials</a>-->
-                            <a href="pages/product-reviews.html">Product Reviews</a>
-                            <a href="pages/contact.html">Get in Touch!</a>
+                            <a href="/pages/product-reviews.html">Product Reviews</a>
+                            <a href="/pages/contact.html">Get in Touch!</a>
                         </div>
                     </li>
                 </ul>
@@ -65,7 +65,7 @@
         <section id="not-found">
 <h2>Whoops!</h2>
 <p>It looks like the page you're looking  for doesn't exist. My bad.</p>
-<p>Click <a href="404.html">here to go back to the homepage</a>.  
+<p>Click <a href="/index.html">here to go back to the homepage</a>.  
 
 </p>
         </section>
@@ -78,7 +78,7 @@
                     earn from qualifying purchases.</p>
             </div>
             <div class="footer-signup">
-                <a href="pages/signup.html" class="btn-signup">Sign Up!</a>
+                <a href="/pages/signup.html" class="btn-signup">Sign Up!</a>
             </div>
             <div class="footer-copyright">
                 <p>&copy; 2024 My Coding Journey. All rights reserved.</p>
