Working on blog index page styles

--- a/pages/blog-index.html
+++ b/pages/blog-index.html
@@ -63,15 +63,29 @@
     <!-- Blog post -->
     <main>
         <section>
-<h2>Blog Index</h2>
-<p>Those of you who are in the know (I wasn't until recently!) will appreciate that it's very difficult to create a functioning blog with many pages, using just HTML and CSS. Hence why my progress in here has stalled somewhat!</p>
-<p>For now, I've been cycling between ignorning the site and continuing my studies, whilst also trying to find little workarounds to get this site to do what I want it it do.</p>
-<p>Thankfully, I just finished the Python section in my course, and am now heading into creating my very own first full stack app, using Python, django and Heroku. I've written about it here. It's going to make things more simple for the site (I'm reluctant to say easier at this point!)</p>
-<p>But for now, here are my most recent blog posts. </p>
-<p>Enjoy!</p>
+            <h2>Blog Index</h2>
+            <p>Those of you who are in the know (I wasn't until recently!) will appreciate that it's very difficult to
+                create a functioning blog with many pages, using just HTML and CSS. Hence why my progress in here has
+                stalled somewhat!</p>
+            <p>For now, I've been cycling between ignorning the site and continuing my studies, whilst also trying to
+                find little workarounds to get this site to do what I want it it do.</p>
+            <p>Thankfully, I just finished the Python section in my course, and am now heading into creating my very own
+                first full stack app, using Python, django and Heroku. I've written about it here. It's going to make
+                things more simple for the site (I'm reluctant to say easier at this point!)</p>
+            <p>But for now, here are my most recent blog posts. </p>
+            <p>Enjoy!</p>
+        </section>
+        <section class="blog-index-container">
+            <!-- Individual blog post listings -->
+            <div class="blog-item">
+                <div class="blog-date">2024-09-01</div>
+                <div class="blog-title">
+                    <a href="post-link.html">Blog Post Title</a>
+                </div>
+                <div class="blog-excerpt">This is the first few lines of the blog post...</div>
+            </div>
         </section>
         <!-- Previous and next blog arrows-->
-
         <div class="container next-prev-blog">
             <div class="prev-blog">
                 <a href="pages/blog-archive/blog-day-3.html">
