Add blog index table formatting

--- a/pages/blog-index.html
+++ b/pages/blog-index.html
@@ -77,27 +77,43 @@
         </section>
         <section class="blog-index-container">
             <!-- Individual blog post listings -->
-            <div class="blog-item">
+            <div class="blog-index-item">
                 <div class="blog-date">2024-09-01</div>
                 <div class="blog-title">
                     <a href="post-link.html">Blog Post Title</a>
                 </div>
                 <div class="blog-excerpt">This is the first few lines of the blog post...</div>
             </div>
+            <!-- Individual blog post listings -->
+            <div class="blog-index-item">
+                <div class="blog-date">2024-09-01</div>
+                <div class="blog-title">
+                    <a href="post-link.html">Blog Post Title</a>
+                </div>
+                <div class="blog-excerpt">This is the first few lines of the blog post...</div>
+            </div>
+            <!-- Individual blog post listings 
+            <div class="blog-index-item">
+                <div class="blog-date">2024-09-01</div>
+                <div class="blog-title">
+                    <a href="post-link.html">Blog Post Title</a>
+                </div>
+                <div class="blog-excerpt">This is the first few lines of the blog post...</div>
+            </div> -->        
         </section>
         <!-- Previous and next blog arrows-->
-        <div class="container next-prev-blog">
-            <div class="prev-blog">
-                <a href="pages/blog-archive/blog-day-3.html">
-                    <p>Last blog post</p>
-                </a>
+            <div class="container next-prev-blog">
+                <div class="prev-blog">
+                    <a href="pages/blog-archive/blog-day-3.html">
+                        <p>Last blog post</p>
+                    </a>
+                </div>
+                <div class="next-blog">
+                    <a href="">
+                        <p>Next blog post</p>
+                    </a>
+                </div>
             </div>
-            <div class="next-blog">
-                <a href="">
-                    <p>Next blog post</p>
-                </a>
-            </div>
-        </div>
     </main>
     <!-- Footer-->
     <footer>
