Add blog post 11-08-2024

--- a/pages/blog-index.html
+++ b/pages/blog-index.html
@@ -69,8 +69,8 @@
                 stalled somewhat!</p>
             <p>For now, I've been cycling between ignorning the site and continuing my studies, whilst also trying to
                 find little workarounds to get this site to do what I want it it do.</p>
-            <p>Thankfully, I just finished the Python section in my course, and am now heading into creating my very own
-                first full stack app, using Python, django and Heroku. I've written about it here. It's going to make
+            <p>Thankfully, I just finished the Python essentials section in my course, and am now heading into creating my very own
+                first full stack app, using Python, Django and Heroku. I've written about it here. It's going to make
                 things more simple for the site (I'm reluctant to say easier at this point!)</p>
             <p>But for now, here are my most recent blog posts. </p>
             <p>Enjoy!</p>
@@ -78,11 +78,11 @@
         <section class="blog-index-container">
             <!-- Individual blog post listings -->
             <div class="blog-index-item">
-                <div class="blog-date">2024-09-01</div>
+                <div class="blog-date">11-08-2024</div>
                 <div class="blog-title">
-                    <a href="post-link.html">Blog Post Title</a>
+                    <a href="post-link.html">My Rollercoaster Day</a>
                 </div>
-                <div class="blog-excerpt">This is the first few lines of the blog post...</div>
+                <div class="blog-excerpt">This is harder than I thought...</div>
             </div>
             <!-- Individual blog post listings -->
             <div class="blog-index-item">
