--- a/pages/blog-archive/blog-this-is-harder-than-i-thought.html
+++ b/pages/blog-archive/blog-this-is-harder-than-i-thought.html
@@ -1,24 +1,165 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    
+    <!-- Title: Update dynamically for each page/post -->
+    <title>My Rollercoaster Day: Struggles with Blog Design and JavaScript</title>
+    <meta name="description" content="Today has been another rollercoaster. Struggles with blog design, CSS issues, and the challenge of working on JavaScript. Read about the trials and triumphs in creating a blog template and getting through a difficult day.">
+    <meta name="keywords" content="blog, design struggles, CSS issues, JavaScript, personal project, web development">
+    <meta name="author" content="LJ Talks">
+    <!-- Open Graph Meta Tags: Update dynamically for each page/post -->
+    <meta property="og:title" content="My Rollercoaster Day: Struggles with Blog Design and JavaScript">
+    <meta property="og:description" content="Today has been another rollercoaster. Struggles with blog design, CSS issues, and the challenge of working on JavaScript. Read about the trials and triumphs in creating a blog template and getting through a difficult day.">
+    <!--<meta property="og:image" content="URL_TO_IMAGE"> <!-- Update with actual image URL -->
+    <!--<meta property="og:url" content="URL_OF_THE_PAGE"> <!-- Update with actual page URL 
+    <meta property="og:type" content="article">-->
+
+    <!-- Twitter Card Meta Tags: Update dynamically for each page/post -->
+    <!--<meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="My Rollercoaster Day: Struggles with Blog Design and JavaScript">
+    <meta name="twitter:description" content="Today has been another rollercoaster. Struggles with blog design, CSS issues, and the challenge of working on JavaScript. Read about the trials and triumphs in creating a blog template and getting through a difficult day.">
+    <meta name="twitter:image" content="URL_TO_IMAGE">
+    
+    <!-- Preconnects for Performance -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <!-- Font Import -->
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap');
+    </style>
+    <!-- Stylesheet -->
+    <link rel="stylesheet" href="/assets/css/style.css">
+    <!--Favicon-->
+    <link rel="apple-touch-icon" sizes="180x180" href="../assets/favicon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="../assets/favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="../assets/favicon/favicon-16x16.png">
+    <link rel="manifest" href="../assets/favicon/site.webmanifest">
+    <!-- MailerLite Universal -->
+    <script>
+        (function (w, d, e, u, f, l, n) {
+            w[f] = w[f] || function () {
+                    (w[f].q = w[f].q || [])
+                    .push(arguments);
+                }, l = d.createElement(e), l.async = 1, l.src = u,
+                n = d.getElementsByTagName(e)[0], n.parentNode.insertBefore(l, n);
+        })
+        (window, document, 'script', 'https://assets.mailerlite.com/js/universal.js', 'ml');
+        ml('account', '1050017');
+    </script>
+    <!-- End MailerLite Universal -->
+
 </head>
+
 <body>
-    <p>
-        today has been another rollercoaster. I haven't managed to leave the house yet. Again. I woke up at 2am, again. ANd I broke and fixed and broke and amd broke and fixed my website again, several times. It's just gone 12 noon. The sun us shining. I was about to head out for a little walk, then something stopped me and here I am again. I'm trying to get that little picture to sit on the left while the two text elements sit on the right, each taking up 50% of the screen width (I'm working on tablet size and above right now, mobile is all good). But the blooming thing won't co-operate. I've got 3 columns and they're not even in the right order. ANyway, that's what's olding me back at the moment. I have so much to write about and tell you all that I just want ot  get on with it. But until I have my base plate figured out for the general blog styling (and fixed that stupid header dropdown) 
-    </p>
-<p>I feel like i can't write any posts. </p>
-<p>And then it hit me... like a brick in the face...</p>
-<img src="/pages/blog-archive/blog-this-is-harder-than-i-thought.html" alt="This is a bit harder than I thought..."></p>
-<p>My simple blog, where I can tell my story as I go, is turning into an absolute monster.</p>
-<p>I knew this was coming. I thought I'd hit it this morning "I just don't know how to do this!" I'm suposed to be working on JavaScript now, first personal project starts at the end of this week (it's Sunday now) and I can't get the blooming boxes to sit right to make things go where I want them to.  </p>
-<p>I was determined not to give up. Having forgotten entirely the process of "mobile first" I've happily spent the last week working on this site, on my laptop (well my TV actually; can't currently see my 17" laptop screen as I've ruined my eyes) and realised this morning. SO I've reversed engineered it, and mobile is looking ok.  </p>
-During this rocess I'm trying very  hard to keep my css logical and neat. It's getting very tricky! (You looked, didn't you!)</p> 
-<p>I was really proud with myself for sticking with it determindely to get the issues corrected so I could go and play with JavaSccript. I solved lots of problems. I hadn't hit the wall after all, then that popped into my head. I asked chat GPT as there's no-one else here. I know he lies but he's got me thinking about things I didn't know existed befre so I usually give him a try cautiously. </p>
-<p>the thing is, this mammoth task might even be easier if I knew some JS.</p>
-<p>Maybe I will go for that walk...</p> 
+    <!-- Main Header Section -->
+    <header>
+        <div class="container header">
+            <a href="/index.html" id="logo-text">
+                <h1>My Coding Journey</h1>
+            </a>
+            <nav>
+                <ul id="header-menu">
+                    <li class="dropdown">
+                        <a href="#" class="dropbtn">More</a>
+                        <div class="dropdown-content">
+                            <a href="/pages/blog-index.html">Blog</a>
+                            <a href="/pages/about.html">About</a>
+                            <!--<a href="portfolio.html">Portfolio</a>
+                            <a href="testimonials.html">Testimonials</a>-->
+                            <a href="/pages/product-reviews.html">Product Reviews</a>
+                            <a href="/pages/contact.html">Get in Touch!</a>
+                        </div>
+                    </li>
+                </ul>
+            </nav>
+        </div>
+    </header>
+    <!-- Blog post 11-08-2024 -->
+    <main>
+        <h2>My Rollercoaster Day: Struggles with Blog Design and JavaScript</h2>
+        <p></p>
+        <h3>This is harder than I thought...</h3>
+        <p></p>
+        <p>
+            Today has been another rollercoaster. I haven't managed to leave the house yet. Again. I woke up at 2am,
+            again.
+        </p>
+        <p>And I broke and fixed and broke and amd broke and fixed my website again, several times.</p>
+        <p>It's just gone 12 noon.</p>
+        <p>The sun is shining. I was about to head out for a little walk, then something stopped me and here I am again.
+        </p>
+        <p>I'm trying to get that little picture to sit on the left while the two text elements sit on the right, each
+            taking up 50% of the screen width (I'm working on tablet size and above right now, mobile is all good).</p>
+        <p>But the blooming thing won't co-operate.</p>
+        <p>I've got 3 columns and they're not even in the right order.</p>
+        <p>Anyway, that's what's holding me back at the moment. I have so much to write about and tell you all that
+            I just want ot get on with it. But until I have my main boilerplate template figured out for the general
+            blog styling (and fixed that
+            stupid header dropdown menu...)</p>
+        <p>I feel like i can't write any posts. </p>
+        <p>And then it hit me... like a brick in the face...</p>
+        <img src="/pages/blog-archive/blog-images/not-easy.png" alt="This is a bit harder than I thought...">
+        </p>
+        <p>My simple blog, where I hoped to simply tell my story as I go, is turning into an absolute monster.</p>
+        <p>I knew this was coming. I thought I'd hit it this morning "I just don't know how to do this!" I'm suposed to
+            be
+            working on JavaScript now, first personal project starts at the end of this week (it's Sunday now) and I
+            can't
+            get the blooming boxes to sit right to make things go where I want them to. </p>
+        <p>I was determined not to give up. Having forgotten entirely the process of designing for "mobile first" I've
+            happily spent the
+            last week working on this site, on my laptop (well my TV actually; can't currently see my 17" laptop screen
+            as
+            I've <a href="">ruined my eyes</a>) and realised this morning. SO I've reversed engineered it, and mobile is
+            looking ok. </p>
+        During this process I'm trying very hard to keep my css logical and neat. It's getting very tricky! (You looked,
+        didn't you!)</p>
+        <p>I was really proud of myself for sticking with it determindely to get the issues corrected so I could go
+            and play with JavaScript.</p>
+        <p>I solved lots of problems. I hadn't hit the wall after all, then that popped into my
+            head.</p>
+        <p>I asked chat GPT as there's no-one else here. I know he lies sometimes (he's such a people pleaser) but he's
+            got me thinking about things I didn't know existed before so I usually give him a try, cautiously. </p>
+        <p>The thing is, I have a sneaky suspicion that this mammoth task might even be easier if I knew some JS...</p>
+        <p>Maybe I will go for that walk...</p>
 
 </body>
+<!-- Previous and next blog arrows-->
+
+<div class="container next-prev-blog">
+    <div class="prev-blog">
+        <a href="pages/blog-archive/blog-day-3.html">
+            <p>Last blog post</p>
+        </a>
+    </div>
+    <div class="next-blog">
+        <a href="">
+            <p>Next blog post</p>
+        </a>
+    </div>
+</div>
+<div class="blog-index">
+    <a href="/pages/blog-index.html">Blog Contents</a>
+</div>
+</main>
+<!-- Footer-->
+<footer>
+    <div id="footer">
+        <div class="footer-amazonlink">
+            <p>As an <a href="https://amzn.to/4cZ7Tz3" target="_blank" class="amazon">Amazon Associate</a>, I
+                earn from qualifying purchases.</p>
+        </div>
+        <div class="footer-signup">
+            <a href="signup.html" class="btn-signup">Sign Up!</a>
+        </div>
+        <div class="footer-copyright">
+            <p>&copy; 2024 My Coding Journey. All rights reserved.</p>
+        </div>
+    </div>
+</footer>
+</body>
+
 </html>
